--- a/PRACTICA.HTML
+++ b/PRACTICA.HTML
@@ -18,6 +18,8 @@
             <li><a href="">CONTACTOS</a> </li>
             <LI> <a href="">Acerca de </a> </LI>
             <LI> <a href="">Acerca de </a> </LI>
+<LI> <a href="">Acerca de </a> </LI>
+<LI> <a href="">Acerca de </a> </LI>
         </ul>
     </nav>
 
